syntax = "proto3";
package proto;

option go_package  = "./pb";



message CosmosAssetResponse {
  string address = 1;
  string chain_id = 2;
  string quote_currency = 3;
  int64 account_number = 4;
  int64 sequence = 5;
  bool cross_chain_transfer = 6;
  repeated CosmosTokenBalance token = 7;
}

message CosmosTokenBalance {
  string contract_name = 1;
  string contract_ticker_symbol = 2;
  int32 contract_decimals = 3;
  int64 coin = 4;
  string balance = 5;
  double quote_rate = 6;
  string logo_url = 7;
  string quote_rate_24h = 8;
  double quote_pct_change_24h = 9;
  string quote_price = 10;
  string denom = 11;
}
message CosmosValidatorsRequest{
  string address = 1;
  string chain=2;
  bool testnet =3;
}
message CosmosValidatorsResponse{
   string height=1;
   repeated ValidatorInfo validators=6;
}

message ValidatorInfo {
  string operator_address =1;
  string consensus_pubkey =2;
  bool jailed =3;
  string status =4;
  string tokens =5;
  string delegator_shares =6;
  ValidatorDescription description =7;
  string unbonding_height =8;
  string unbonding_time =9;
  ValidatorCommission commission =10;
  string min_self_delegation =11;
  bool active_stake =12;
  string voting_power =13;
  string quote_rate =14;
  double apr =15;
  string image_url =16;
}
message ValidatorForDelegatorInfo {
  string operator_address =1;
  string consensus_pubkey =2;
  bool jailed =3;
  string status =4;
  string tokens =5;
  string delegator_shares =6;
  ValidatorDescription description =7;
  string unbonding_height =8;
  string unbonding_time =9;
  ValidatorCommission commission =10;
  string min_self_delegation =11;
  string voting_power =12;
  double apr =13;
  string image_url =14;
}
message ValidatorDescription {
  string moniker =1;
  string identity =2;
  string website =3;
  string security_contact =4;
  string details =5;
}

message ValidatorCommission {
  ValidatorCommissionRates commission_rates =1;
  string update_time=2;
}

message ValidatorCommissionRates {
  string rate =1;
  string max_rate =2;
  string max_change_rate =3;
}
message CosmosAprRatesRequest{
  string chain=1;
  bool testnet =2;
}
message CosmosAprRatesResponse{
  double apr = 1;
}

message CosmosDelegationsRequest{
  string address = 1;
  string chain=2;
  bool testnet =3;
}

message CosmosDelegationsResponse{
  OverallDenomsValues net_stake_values =1;
  repeated DenomsWiseValues individual_stake_values =2;
  repeated DelegationsInfo delegations=3;
  repeated UnDelegationsInfo unbound_delegations=4;
  double apr=5;

}
message OverallDenomsValues {
  string total_staked_quote=1;
  string total_unstaked_quote=2;
  string  total_rewards_quote=3;
}
message DenomsWiseValues {
  string stake_balance=1;
  string unstake_balance=2;
  string  rewards_balance=3;
  string total_staked_quote=4;
  string total_unstaked_quote=5;
  string  total_rewards_quote=6;
  string denom=7;
}
message DelegationsInfo {
  DelegationDetail delegation =1;
  BalanceDetail balance =2;
  ValidatorForDelegatorInfo validator_details =3;
  RewardsInfo rewards_details =4;

}
message DelegationDetail{
  string delegator_address = 1;
  string validator_address=2;
  string shares =3;
}
message BalanceDetail{
  string denom = 1;
  string amount=2;
  int64 decimals =3;
  string quote_rate =4;
  string quote =5;
  string ticker_symbol =6;
  string logo_url =7;
}
message RewardsInfo{
  string validator_address = 1;
  repeated RewardsListInfo reward=2;
}
message RewardsListInfo{
  string denom = 1;
  string amount=2;
  int64 decimals =3;
  string quote =4;
  string ticker_symbol =5;
  string logo_url =6;
  string quote_rate =7;
}
message UnDelegationsInfo {
  DelegationDetail delegation =1;
  string delegator_address =2;
  string validator_address =3;
  repeated Entries entries =4;
  BalanceDetail balance =5;
  ValidatorForDelegatorInfo validator_details =6;
}

message Entries {
  string creation_height =1;
  string completion_time =2;
  string initial_balance =3;
  string balance =4;
}

message CosmosSendTxRequest{
  string chain = 1;
  string tx_bytes  = 2;
  string mode = 3;
  bytes tx_details = 4; //only for bluzelle chain payload
}

message CosmosCDPParametersRequest{
  string chain=1;
  bool testnet =2;
}
message CosmosCDPRequest{
  string chain=1;
  string address=2;
  bool testnet =3;
}
message CosmosCDPParametersResponse {
  repeated CollateralParams collateral_params = 1;
  DebtParam debt_param = 2;
  GlobalDebtLimit global_debt_limit = 3;
  string surplus_auction_threshold = 4;
  string surplus_auction_lot = 5;
  string debt_auction_threshold = 6;
  string debt_auction_lot = 7;
}

message CollateralParams {
  string denom = 1;
  string type = 2;
  string liquidation_ratio = 3;
  DebtLimit debt_limit = 4;
  string stability_fee = 5;
  string auction_size = 6;
  string liquidation_penalty = 7;
  string spot_market_id = 8;
  string liquidation_market_id = 9;
  string keeper_reward_percentage =10;
  string check_collateralization_index_count = 11;
  string conversion_factor = 12;
}
message DebtLimit {
  string denom = 1;
  string amount = 2;
}
message DebtParam {
  string denom = 1;
  string reference_asset = 2;
  string conversion_factor = 3;
  string debt_floor = 4;
}
message GlobalDebtLimit {
  string denom = 1;
  string amount = 2;
}

message CosmosCDPResponse{
  string height = 1;
  CDPResult result=2;
}

message CDPResult{
  string type=1;
  CDPResultValue value=2;
  CDPDetails cdp_details=3;
  CosmosCDPParametersResponse cdp_parameters=4;


}
message CDPResultValue{
  string address=1;
  string public_key=2;
  string account_number=3;
  string sequence=4;
  CDPResultValueCoinTotal coin_total=5;
  repeated CDPResultValueCoins coins=6;
  repeated CDPResultValueVestingPeridos vesting_periods=7;
}
message CDPResultValueCoinTotal{
  string account_total=1;
  string coin_quote_rate_total=2;
}
message CDPResultValueCoins{
  string denom=1;
  string amount=2;
  string ticker_symbol=3;
  string quote_rate=4;
  int32 decimals=5;
  string name=6;
  string logo_url=7;
  string quote=8;
}
message CDPResultValueVestingPeridos{
  int32 length=1;
}
message CDPDetails{
  CDPDetailsEnt cdp=1;
}
message CDPDetailsEnt{
  string id=1;
  string owner=2;
  string type=3;
  CDPDetailsEntCollateral collateral=4;
  CDPDetailsEntPrincipal principal=5;
  CDPDetailsEntAccumulated accumulated_fees=6;
  string fees_updated=7;
  string interest_factor=8;
  CDPDetailsEntCollateralValue collateral_value=9;
  string collateralization_ratio=10;
}
message CDPDetailsEntCollateral{
  string denom=1;
  string amount=2;
}
message CDPDetailsEntPrincipal{
  string denom=1;
  string amount=2;
}
message CDPDetailsEntAccumulated{
  string denom=1;
  string amount=2;
}
message CDPDetailsEntCollateralValue{
  string denom=1;
  string amount=2;
}

message CosmosSimulateTxRequest{
  string chain = 1;
  string tx_bytes = 2;
}

message CosmosSimulateGasPrice  {
  float fast = 1;
  float safe_low = 2;
  float fastest = 3;
  float average = 4;
  float safe_low_wait = 5;
  float avg_wait = 6;
  float fast_wait = 7;
  float fastest_wait = 8;
}

message CosmosSimulateTxResponse{
  bool simulation_result = 1;
  int64 gas_limit = 2;
  CosmosSimulateGasPrice gas_price = 3;
  int64 fee = 4;
  string quote_rate = 5;
  string message = 6;
}

message GetCosmosBlockHeightRequest{
  string chain = 1;
}

message GetCosmosBlockHeightResponse{
  int64 block_height = 1;
}



